working on settings

--- a/src/assets/i18n/it-IT.json
+++ b/src/assets/i18n/it-IT.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Impostazioni di Avaya",
+		"SETTINGS": "Impostazioni",
+		"USER": "Impostazioni utente",
+		"ROOM": "Sala virtuale",
+		"GENERAL": "Impostazioni generali",
+		"CLIENT": "Client",
+		"PREFERENCES": "Preferenze utente",
+		"SUPPORT": "Assistenza",
+		"PASSWORD": "Modifica password",
+		"PASSWORD_RESET": "Ripristina password",
+		"OK": "OK",
+		"CANCEL": "Annulla",
+		"RESET": "Ripristina",
+		"APPLY": "Applica",
+		"AUTO": "Auto",
+		"USER_TAB": {
+			"DELETE": "Elimina",
+			"CANCEL": "Annulla",
+			"LOCATION": "Posizione riunione:",
+			"DEFAULT_ROOM": "Sala virtuale predefinita:",
+			"UPLOAD_NEW": "Carica nuovo",
+			"UPLOAD_PROFILE_PHOTO": "Carica foto del profilo",
+			"UPLOAD_NEW_PHOTO": "Carica nuova foto",
+			"EDIT_PROFILE_PHOTO": "Modifica foto del profilo",
+			"DELETE_PHOTO_TITLE": "Eliminare la foto del profilo?",
+			"DELETE_PHOTO_DESCRIPTION": "Impossibile annullare l'operazione.",
+			"UPLOADING_ERROR": "Caricamento non riuscito, contattare l'amministratore",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "Impossibile rimuovere l'immagine",
+			"AUDIO_PROMPTS_LANGUAGE": "Lingua dei prompt audio",
+			"PARTICIPANT_ID": "ID partecipante personale:",
+			"REFRESH": "Aggiorna",
+			"SEARCH_USER": "Ricerca utenti",
+			"REMOVE_USER": "Rimuovi permesso",
+			"DELEGATED_TITLE": "Delegati che possono pianificare le riunioni nelle sale personali"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "Numero sala virtuale:",
+			"ROOM_NAME": "Nome sala virtuale:",
+			"ROOM_DESCRIPTION": "Descrizione:",
+			"MEETING_TYPE": "Tipo di riunione:",
+			"MODERATOR_PIN": "PIN moderatore:",
+			"MODERATOR_PIN_NOTE": "I partecipanti devono immettere il PIN per utilizzare i comandi moderatore.",
+			"ENTRY_PIN": "Proteggi la riunione con un PIN",
+			"ENTRY_PIN_NOTE": "I partecipanti devono immettere questo PIN per partecipare alle riunioni.",
+			"ALLOW_REQUESTS": "Consenti richieste di partecipazione a riunioni bloccate",
+			"ALWAYS_RECORD_MEETING": "Attiva la registrazione automaticamente all'avvio delle riunioni",
+			"RECORDING_NOT_SUPPORTED": "Registrazione non supportata per questa Sala virtuale",
+			"WAITING_ROOM": "Metti i partecipanti in una \"sala di attesa\" finché il moderatore non si unisce alla riunione",
+			"TERMINATE_MEETING": "Termina riunione dopo l'uscita dell'ultimo moderatore",
+			"PERMANENT_PIN": "PIN permanente:",
+			"ONETIME_PIN": "Utilizza un PIN unico per ogni riunione",
+			"DEFAULT": "Sala predefinita",
+			"PUBLIC": "Sala pubblica",
+			"ADVANCED": "Avanzate",
+			"DURATION_AFTER_LEFT": "Durata dopo abbandono:",
+			"TERMINATION_CONDITION": "Condizione di terminazione:",
+			"MAX_PARTICIPANTS": "Partecipanti max.:",
+			"NO_LIMIT": "Nessun limite",
+			"SEARCH_ENDPOINTS": "Cerca terminali",
+			"AUDIO_PROMPTS_LANGUAGE": "Lingua della richiesta audio per gli utenti ospiti:",
+			"INVITATION_LANGUAGE": "Lingua dell'invito:",
+			"PREFERRED_DIAL_IN_LOCATION": "Posizione di composizione preferita:",
+			"ENABLE_SHARING_FOR": "Attiva la condivisione per:",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "Solo moderatore",
+				"MODERATOR_AND_REGISTERED_USER": "Moderatore e utenti registrati",
+				"EVERYONE": "Tutti"
+			},
+			"ENTRY_ANNOUNCEMENT": "Annuncio di entrata:",
+			"EXIT_ANNOUNCEMENT": "Annuncio di uscita",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "Numero massimo di partecipanti a riprodurre il tono di entrata/uscita:",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "Numero massimo di partecipanti a riprodurre l'annuncio del nome in entrata/uscita:",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "Nessuno",
+				"TONE": "Tono",
+				"NAME": "Nome"
+			},
+			"MAX_ROOM_ENDPOINTS": "Massimo numero di terminali della sala:",
+			"PROTECTED_PARTICIPANT_ID": "Proteggi la riunione con l'ID partecipante",
+			"PROTECTED_PARTICIPANT_ID_INFO": "Gli utenti ospiti e i sistemi sale verranno disabilitati per partecipare alla riunione"
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "Normale",
+			"AFTER_ALL_PARTIES_LEFT": "Dopo abbandono di tutti i partecipanti",
+			"AFTER_HOST_LEFT": "Dopo abbandono dell'organizzatore"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "Ripristina valori predefiniti",
+			"AUDIO_MUTED": "Disattiva microfono all'ingresso in riunione",
+			"SPEAKER_MUTED": "Disattiva altoparlanti all'ingresso in riunione",
+			"ENABLE_AC": "Abilita Avaya su questo PC",
+			"ENABLE_SDC": "Attiva il client Scopia Desktop su questo PC"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "Nome utente:",
+			"EMAIL": "E-mail:",
+			"FIRST_NAME": "Nome:",
+			"LAST_NAME": "Cognome:",
+			"PHONE_OFFICE": "Telefono (ufficio):",
+			"PHONE_MOBILE": "Telefono (cellulare):",
+			"MAX_BANDWIDTH": "Larghezza di banda massima consentita:",
+			"PERSONAL_ENDPOINT": "Terminale personale:",
+			"RECORDING_POLICY": "Politica di registrazione:",
+			"GROUPS": "Gruppi",
+			"SCHEDULABLE": "Programmabile",
+			"RESERVABLE": "Prenotabile",
+			"ALLOW_STREAMING": "Consenti streaming",
+			"ALLOW_RECORDING": "Consenti registrazione",
+			"KBPS": "Kbps",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "Può pianificare una conferenza evento"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "Videochiamata",
+			"VIDEO_CALLING_EXPLANATION": "Disabilitando ‘Videochiamata’ si parteciperà a una riunione in modalità audio + presentazione",
+			"DEFAULT_FORMAT": "Utilizza il formato orario predefinito del sistema",
+			"DATE_FORMAT_TITLE": "Formato della data:",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "MM/GG/AA",
+				"DD_MM_YY": "GG/MM/AA"
+			},
+			"TIME_FORMAT": "Utilizza il formato orario a 24 ore",
+			"ENABLE_LOGGING": "Abilita registrazione",
+			"DOWNLOAD_LOGS": "Scarica registri",
+			"REPORT_A_PROBLEM_EML": "Segnala un problema di scaricamento del file .eml e quindi aprilo",
+			"REPORT_A_PROBLEM_EMAIL": "Segnala un problema di file di registro zip allegato manualmente nella e-mail"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "Nome",
+			"TABLE_DESCRIPTION": "Descrizione",
+			"TABLE_VERSION": "Versione",
+			"TABLE_TYPE": "Tipo",
+			"DOWNLOAD_AC": "Scarica app V{{version}}",
+			"DOWNLOAD_CHROME_PLUGIN": "Scarica plug-in condivisione Avaya",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "Scarica il componente aggiuntivo Outlook per riunioni da Microsoft Store",
+			"CLIENT_INFO": "Versione {{version}} installata",
+			"UPDATE_AC": "Aggiorna Avaya Workplace alla versione {{version}}",
+			"REMOTE_INFO": "App non più disponibile",
+			"CONTINUE": "Continua",
+			"OPTIONAL": "Opzionale",
+			"REQUIRED": "Obbligatorio",
+			"NO_CLIENT": "Nessun client rilevato"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "Password corrente:",
+			"NEW": "Nuova password:",
+			"CONFIRM": "Ripeti nuova password:",
+			"CHANGE": "Cambia",
+			"ERROR": {
+				"REQUIRED": "Obbligatoria.",
+				"DO_NOT_MATCH": "Le password non corrispondono",
+				"INVALID": "Non valida!",
+				"SERVER_NOT_CHANGED": "La password non è stata modificata. Riprovare più tardi",
+				"SERVER_BAD_OLD_PASSWORD": "La password corrente non è valida. Riprovare",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "L'utente sta tentando di utilizzare una password precedente",
+				"SERVER_CHANGE_FREQUENCY": "Impossibile cambiare la password due volte in un giorno",
+				"SERVER_CHANGE_REPEATED_CHARS": "ERRORE: non deve contenere caratteri ripetuti o sequenziali",
+				"SERVER_CHANGE_COMPLEXITY": "ERRORE: deve contenere le seguenti quattro categorie: caratteri minuscoli/maiuscoli/numerici/speciali non alfanumerici",
+				"SERVER_TOO_SHORT": "La nuova password è troppo breve",
+				"SERVER_INVALID_TOKEN": "Il collegamento per il recupero della password è scaduto. Effettuare nuovamente la richiesta.",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "Superato numero di password precedenti che non possono essere utilizzate",
+				"CANNOT_CONTAIN_LOGIN_ID": "La password non può contenere l'ID di accesso",
+				"MUST_CONTAIN_4_CATEGORIES": "Deve contenere le seguenti 4 categorie: caratteri minuscoli/maiuscoli/numerici/speciali non alfanumerici",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "Non deve contenere caratteri ripetuti",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "Non deve contenere caratteri sequenziali"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "Impossibile aggiornare le impostazioni",
+			"NOT_VALID_ROOM_NAME": "Nome della sala non valido!",
+			"NOT_VALID_PIN": "PIN non valido!",
+			"NUMERIC_PIN_CODE_ALLOWED": "Utilizzare un codice pin numerico",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "Caratteri non consentiti",
+			"REQUIRED": "Obbligatorio",
+			"ORG_NOT_EXIST": "Avaya Meetings è configurato per supportare più organizzazioni. È necessario specificare l'organizzazione desiderata come parte dell'URL. Contattare l'amministratore di Avaya Meetings per ulteriori informazioni",
+			"RESOURCES_NOT_FETCHED": "Impossibile ottenere le risorse dal server.\nMessaggio di errore: {{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "Impossibile connettersi al server AADS",
+			"WAITING_ROOM_MUST_BE_ENABLED": "La sala d'attesa deve essere abilitata",
+			"MODERATOR_PIN_REQUIRED": "Il PIN del moderatore è obbligatorio",
+			"WRONG_MEETING_TYPE": "Tipo di riunione errato",
+			"NO_DATA_TO_INIT_USER_SERVICE": "Impossibile ottenere i dati dal servizio utente (URL immagini)",
+			"MAX_PLAY_NUMBER_MORE_THAN": "è consentito un massimo di 100 partecipanti"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "Se si disattiva la registrazione, i registri precedenti verranno eliminati.\nContinuare?",
+			"NO_LOGS": "Nessun registro disponibile. Avviare la conferenza per iniziare la registrazione."
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "La modifica del PIN non influirà sulle riunioni attive né su quelle pianificate esistenti.",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "La modifica del PIN non influirà sulle riunioni attive."
+	},
+	"ON": "Acceso",
+	"OFF": "Spento",
+	"DISABLED": "Disabilitato",
 	"ABOUT": {
 		"TITLE": "Informazioni su Avaya Meetings",
 		"RELEASE": "Versione:",
