--- a/src/assets/i18n/ja-JP.json
+++ b/src/assets/i18n/ja-JP.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Avaya 設定",
+		"SETTINGS": "設定",
+		"USER": "ユーザー設定",
+		"ROOM": "仮想会議室",
+		"GENERAL": "一般設定",
+		"CLIENT": "クライアント",
+		"PREFERENCES": "ユーザー環境設定",
+		"SUPPORT": "サポート",
+		"PASSWORD": "パスワードの変更",
+		"PASSWORD_RESET": "パスワードのリセット",
+		"OK": "OK",
+		"CANCEL": "キャンセル",
+		"RESET": "リセット",
+		"APPLY": "適用",
+		"AUTO": "自動",
+		"USER_TAB": {
+			"DELETE": "削除",
+			"CANCEL": "キャンセル",
+			"LOCATION": "会議の場所：",
+			"DEFAULT_ROOM": "既定の仮想会議室：",
+			"UPLOAD_NEW": "新しいアップロード",
+			"UPLOAD_PROFILE_PHOTO": "プロフィール画像のアップロード",
+			"UPLOAD_NEW_PHOTO": "新しい画像のアップロード",
+			"EDIT_PROFILE_PHOTO": "プロフィール画像の編集",
+			"DELETE_PHOTO_TITLE": "プロフィール画像を削除しますか？",
+			"DELETE_PHOTO_DESCRIPTION": "この操作は元に戻すことができません。",
+			"UPLOADING_ERROR": "アップロードに失敗しました。管理者に連絡してください。",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "画像を削除できません",
+			"AUDIO_PROMPTS_LANGUAGE": "オーディオプロンプト言語",
+			"PARTICIPANT_ID": "参加者 ID：",
+			"REFRESH": "更新",
+			"SEARCH_USER": "ユーザーの検索",
+			"REMOVE_USER": "委任の削除",
+			"DELEGATED_TITLE": "個人会議室に会議をスケジュールできる代理人"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "仮想会議室番号：",
+			"ROOM_NAME": "仮想会議室の名前：",
+			"ROOM_DESCRIPTION": "説明：",
+			"MEETING_TYPE": "会議の種類：",
+			"MODERATOR_PIN": "モデレーター PIN：",
+			"MODERATOR_PIN_NOTE": "参加者は、モデレーター制御を使用するときに、この PIN を入力する必要があります。",
+			"ENTRY_PIN": "PIN で会議を保護する",
+			"ENTRY_PIN_NOTE": "参加者は、会議に参加するときにこの PIN を入力する必要があります。",
+			"ALLOW_REQUESTS": "ロックされた会議への参加申請を許可する",
+			"ALWAYS_RECORD_MEETING": "会議の開始時に会議記録を自動的に有効にする",
+			"RECORDING_NOT_SUPPORTED": "この仮想会議室では会議記録はサポートされていません",
+			"WAITING_ROOM": "モデレーターが参加するまで参加者を「待合室」で待機させる",
+			"TERMINATE_MEETING": "最後のモデレーターが退席した後に会議を終了する",
+			"PERMANENT_PIN": "固定 PIN：",
+			"ONETIME_PIN": "会議毎にワンタイム PIN を使用する",
+			"DEFAULT": "既定の会議室",
+			"PUBLIC": "公開会議室",
+			"ADVANCED": "詳細設定",
+			"DURATION_AFTER_LEFT": "退出後の時間：",
+			"TERMINATION_CONDITION": "終了条件：",
+			"MAX_PARTICIPANTS": "最大参加者数：",
+			"NO_LIMIT": "無制限",
+			"SEARCH_ENDPOINTS": "エンドポイントを検索",
+			"AUDIO_PROMPTS_LANGUAGE": "ゲストユーザーのオーディオプロンプト言語：",
+			"INVITATION_LANGUAGE": "招待言語：",
+			"PREFERRED_DIAL_IN_LOCATION": "ロケーションでの設定ダイヤル",
+			"ENABLE_SHARING_FOR": "次の共有を有効化：",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "モデレーターのみ",
+				"MODERATOR_AND_REGISTERED_USER": "モデレーターと登録ユーザー",
+				"EVERYONE": "全員"
+			},
+			"ENTRY_ANNOUNCEMENT": "開始アナウンス",
+			"EXIT_ANNOUNCEMENT": "終了アナウンス",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "開始/終了トーンがなる最大参加者数",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "開始/終了名前アナウンスがなる最大参加者数",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "なし",
+				"TONE": "トーン",
+				"NAME": "名前"
+			},
+			"MAX_ROOM_ENDPOINTS": "会議室の最大エンドポイント数：",
+			"PROTECTED_PARTICIPANT_ID": "参加者 ID で会議を保護する",
+			"PROTECTED_PARTICIPANT_ID_INFO": "ゲストユーザーとルームシステムは会議の参加が許可されません"
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "標準",
+			"AFTER_ALL_PARTIES_LEFT": "すべての関係者の退出後",
+			"AFTER_HOST_LEFT": "ホストの退出後"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "既定にリセット",
+			"AUDIO_MUTED": "会議参加時にマイクをミュートする",
+			"SPEAKER_MUTED": "会議参加時にスピーカーをミュートする",
+			"ENABLE_AC": "この PC で Avaya を有効にする",
+			"ENABLE_SDC": "この PC で Scopia Desktop クライアントを有効にする"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "ユーザー名：",
+			"EMAIL": "電子メール：",
+			"FIRST_NAME": "名：",
+			"LAST_NAME": "姓：",
+			"PHONE_OFFICE": "電話（勤務先）：",
+			"PHONE_MOBILE": "電話（携帯）：",
+			"MAX_BANDWIDTH": "最大許容帯域幅：",
+			"PERSONAL_ENDPOINT": "個人用エンドポイント：",
+			"RECORDING_POLICY": "会議記録のポリシー：",
+			"GROUPS": "グループ",
+			"SCHEDULABLE": "スケジュールを許可する",
+			"RESERVABLE": "予約を許可する",
+			"ALLOW_STREAMING": "ストリーミングを許可する",
+			"ALLOW_RECORDING": "会議記録を許可する",
+			"KBPS": "Kbps",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "イベント会議のスケジュール設定を許可する"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "ビデオ通話",
+			"VIDEO_CALLING_EXPLANATION": "［ビデオ通話］を無効にすると、オーディオおよびプレゼンテーションモードで会議に参加します",
+			"DEFAULT_FORMAT": "システムのデフォルト時間形式を使用",
+			"DATE_FORMAT_TITLE": "日付形式：",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "月/日/年",
+				"DD_MM_YY": "日/月/年"
+			},
+			"TIME_FORMAT": "24 時間形式を使用",
+			"ENABLE_LOGGING": "ログを有効にする",
+			"DOWNLOAD_LOGS": "ログをダウンロードする",
+			"REPORT_A_PROBLEM_EML": ".eml ファイルをダウンロードし、ファイルを開いて問題をリポートする",
+			"REPORT_A_PROBLEM_EMAIL": "メールのジップログファイルをマニュアルで添付し、問題をリポートする"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "名前",
+			"TABLE_DESCRIPTION": "説明",
+			"TABLE_VERSION": "バージョン",
+			"TABLE_TYPE": "タイプ",
+			"DOWNLOAD_AC": "アプリバージョン {{version}} をダウンロード",
+			"DOWNLOAD_CHROME_PLUGIN": "Avaya Sharing Plug-in をダウンロード",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "Microsoft Store から Meeting Outlook アドインをダウンロードしてください。",
+			"CLIENT_INFO": "リリース {{version}} がインストールされました",
+			"UPDATE_AC": "Avaya Workplace を {{version}} にアップデートする",
+			"REMOTE_INFO": "アプリはもう存在しません",
+			"CONTINUE": "続行",
+			"OPTIONAL": "オプション",
+			"REQUIRED": "必須",
+			"NO_CLIENT": "クライアントは検出されませんでした"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "現在のパスワード：",
+			"NEW": "新しいパスワード：",
+			"CONFIRM": "新しいパスワードの確認：",
+			"CHANGE": "変更",
+			"ERROR": {
+				"REQUIRED": "必須項目です",
+				"DO_NOT_MATCH": "パスワードが一致しません",
+				"INVALID": "無効！",
+				"SERVER_NOT_CHANGED": "パスワードが変更されていません。後でもう一度お試しください",
+				"SERVER_BAD_OLD_PASSWORD": "現在のパスワードは無効です。もう一度入力してください。",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "現在のパスワードが入力されています",
+				"SERVER_CHANGE_FREQUENCY": "同じ日にパスワードを 2 回変更することはできません",
+				"SERVER_CHANGE_REPEATED_CHARS": "エラー - 文字の繰り返しまたは連続する文字は使用できません",
+				"SERVER_CHANGE_COMPLEXITY": "エラー - 次の ４ つのカテゴリが含まれている必要があります：小文字/大文字/数字/非英数字の特殊文字",
+				"SERVER_TOO_SHORT": "新しいパスワードが短すぎます",
+				"SERVER_INVALID_TOKEN": "パスワードリセットのリンクの有効期限が切れました。もう一度リクエストしてください。",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "過去に使用したパスワードの再利用制限回数を超えました",
+				"CANNOT_CONTAIN_LOGIN_ID": "パスワードにログイン ID は使用できません",
+				"MUST_CONTAIN_4_CATEGORIES": "小文字/大文字/数字/英数字の特殊文字以外の 4 つのカテゴリを使用してください",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "繰り返し文字は使用できません",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "連続した文字は使用できません"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "設定の更新に失敗しました。",
+			"NOT_VALID_ROOM_NAME": "会議室の名前が無効です。",
+			"NOT_VALID_PIN": "PIN が無効です。",
+			"NUMERIC_PIN_CODE_ALLOWED": "数値の PIN コードを使用してください",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "許可されていない文字が使用されています",
+			"REQUIRED": "必須",
+			"ORG_NOT_EXIST": "Avaya Meetings は複数の組織をサポートするように設定されています。希望する組織を URL の一部として指定する必要があります。詳しくは、Avaya Meetings 管理者にお問い合わせください",
+			"RESOURCES_NOT_FETCHED": "サーバーからリソースを取得できません。\nエラーメッセージ：{{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "AADS サーバーに接続できません",
+			"WAITING_ROOM_MUST_BE_ENABLED": "待合室を有効にする必要があります",
+			"MODERATOR_PIN_REQUIRED": "モデレーター PIN が必要です",
+			"WRONG_MEETING_TYPE": "不正な会議タイプ",
+			"NO_DATA_TO_INIT_USER_SERVICE": "ユーザーサービス（画像 URL）からデータを取得できません",
+			"MAX_PLAY_NUMBER_MORE_THAN": "最大 100 人が参加可能"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "ログを無効にすると以前のログが削除されます。\n続行しますか？",
+			"NO_LOGS": "利用できるログがありません。会議を開始してログを開始してください。"
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "変更された PIN は、アクティブな会議と既存のスケジュールされた会議には影響しません。",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "PIN を変更してもアクティブな会議には影響しません。"
+	},
+	"ON": "オン",
+	"OFF": "オフ",
+	"DISABLED": "無効",
 	"ABOUT": {
 		"TITLE": "Avaya Meetings のバージョン情報",
 		"RELEASE": "リリース：",
