--- a/src/assets/i18n/pl-PL.json
+++ b/src/assets/i18n/pl-PL.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Ustawienia Avaya",
+		"SETTINGS": "Ustawienia",
+		"USER": "Ustawienia użytkownika",
+		"ROOM": "Pokój wirtualny",
+		"GENERAL": "Ustawienia ogólne",
+		"CLIENT": "Klient",
+		"PREFERENCES": "Preferencje użytkownika",
+		"SUPPORT": "Pomoc techniczna",
+		"PASSWORD": "Zmień hasło",
+		"PASSWORD_RESET": "Zresetuj hasło",
+		"OK": "OK",
+		"CANCEL": "Anuluj",
+		"RESET": "Resetuj",
+		"APPLY": "Zastosuj",
+		"AUTO": "Automatycznie",
+		"USER_TAB": {
+			"DELETE": "Usuń",
+			"CANCEL": "Anuluj",
+			"LOCATION": "Miejsce spotkania:",
+			"DEFAULT_ROOM": "Domyślny pokój wirtualny:",
+			"UPLOAD_NEW": "Prześlij nowy",
+			"UPLOAD_PROFILE_PHOTO": "Prześlij zdjęcie profilowe",
+			"UPLOAD_NEW_PHOTO": "Prześlij nowe zdjęcie profilowe",
+			"EDIT_PROFILE_PHOTO": "Edytuj zdjęcie profilowe",
+			"DELETE_PHOTO_TITLE": "Usunąć Twoje zdjęcie profilowe?",
+			"DELETE_PHOTO_DESCRIPTION": "Tej czynności nie można cofnąć.",
+			"UPLOADING_ERROR": "Przesłanie nie powiodło się, prosimy o kontakt z administratorem",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "Nie można usunąć obrazu",
+			"AUDIO_PROMPTS_LANGUAGE": "Język komunikatów dźwiękowych:",
+			"PARTICIPANT_ID": "Twoje ID uczestnika:",
+			"REFRESH": "Odśwież",
+			"SEARCH_USER": "wyszukaj użytkowników",
+			"REMOVE_USER": "Usuń pozycję",
+			"DELEGATED_TITLE": "Wyznacza, kto może planować spotkania w moich pokojach spotkań"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "Numer pokoju wirtualnego:",
+			"ROOM_NAME": "Nazwa pokoju wirtualnego:",
+			"ROOM_DESCRIPTION": "Opis:",
+			"MEETING_TYPE": "Typ spotkania:",
+			"MODERATOR_PIN": "Kod PIN moderatora:",
+			"MODERATOR_PIN_NOTE": "Uczestnicy muszą wprowadzić ten kod PIN, aby móc korzystać z opcji moderatora.",
+			"ENTRY_PIN": "Zabezpiecz spotkanie kodem PIN",
+			"ENTRY_PIN_NOTE": "Uczestnicy muszą wprowadzić ten kod PIN, aby dołączyć do spotkania.",
+			"ALLOW_REQUESTS": "Akceptuj żądania udziału w zablokowanych spotkaniach",
+			"ALWAYS_RECORD_MEETING": "Automatycznie włączaj nagrywanie na początku spotkań",
+			"RECORDING_NOT_SUPPORTED": "Brak obsługi nagrywania dla tego pokoju wirtualnego",
+			"WAITING_ROOM": "Umieść uczestników w poczekalni do momentu, gdy moderator dołączy do spotkania",
+			"TERMINATE_MEETING": "Zakończ spotkanie, gdy odejdzie ostatni moderator",
+			"PERMANENT_PIN": "Stały kod PIN:",
+			"ONETIME_PIN": "Użyj jednorazowego kodu PIN dla każdego spotkania",
+			"DEFAULT": "Domyślny pokój",
+			"PUBLIC": "Publiczny pokój",
+			"ADVANCED": "Zaawansowane",
+			"DURATION_AFTER_LEFT": "Czas trwania po opuszczeniu:",
+			"TERMINATION_CONDITION": "Warunek zakończenia:",
+			"MAX_PARTICIPANTS": "Maks. liczba uczestników:",
+			"NO_LIMIT": "Bez limitu",
+			"SEARCH_ENDPOINTS": "Szukaj punktów końcowych",
+			"AUDIO_PROMPTS_LANGUAGE": "Język komunikatów dźwiękowych dla gości:",
+			"INVITATION_LANGUAGE": "Język zaproszenia:",
+			"PREFERRED_DIAL_IN_LOCATION": "Preferowane miejsce wybierania numeru:",
+			"ENABLE_SHARING_FOR": "Włącz udostępnianie dla:",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "Tylko moderator",
+				"MODERATOR_AND_REGISTERED_USER": "Moderator i zarejestrowani użytkownicy",
+				"EVERYONE": "Wszyscy"
+			},
+			"ENTRY_ANNOUNCEMENT": "Ogłoszenie wejścia:",
+			"EXIT_ANNOUNCEMENT": "Ogłoszenie wyjścia:",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "Maks. liczba uczestników do odtworzenia dźwięku wejścia/wyjścia:",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "Maks. liczba uczestników do odtworzenia ogłoszenia nazwy:",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "Brak",
+				"TONE": "Ton",
+				"NAME": "Nazwa"
+			},
+			"MAX_ROOM_ENDPOINTS": "Maksymalna liczba punktów końcowych w pokoju:",
+			"PROTECTED_PARTICIPANT_ID": "Zabezpiecz spotkanie za pomocą ID uczestnika",
+			"PROTECTED_PARTICIPANT_ID_INFO": "Goście nie będą mogli dołączyć do spotkania, a systemy wideokonferencyjne zostaną odrzucone."
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "Normalny",
+			"AFTER_ALL_PARTIES_LEFT": "Po opuszczeniu spotkania przez wszystkich uczestników",
+			"AFTER_HOST_LEFT": "Po opuszczeniu spotkania przez gospodarza"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "Przywróć wartości domyślne",
+			"AUDIO_MUTED": "Wycisz mikrofon po dołączeniu do spotkania",
+			"SPEAKER_MUTED": "Wycisz głośniki po dołączeniu do spotkania",
+			"ENABLE_AC": "Włącz Avaya na tym komputerze",
+			"ENABLE_SDC": "Włącz klienta Scopia Desktop na tym komputerze"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "Nazwa użytkownika:",
+			"EMAIL": "E-mail:",
+			"FIRST_NAME": "Imię:",
+			"LAST_NAME": "Nazwisko:",
+			"PHONE_OFFICE": "Telefon (biuro)",
+			"PHONE_MOBILE": "Telefon komórkowy",
+			"MAX_BANDWIDTH": "Maksymalna dopuszczalna szerokość pasma:",
+			"PERSONAL_ENDPOINT": "Osobisty punkt końcowy:",
+			"RECORDING_POLICY": "Zasady nagrywania:",
+			"GROUPS": "Grupy",
+			"SCHEDULABLE": "Możliwe do zaplanowania",
+			"RESERVABLE": "Możliwe do zarezerwowania",
+			"ALLOW_STREAMING": "Zezwól na przesyłanie strumieniowe",
+			"ALLOW_RECORDING": "Zezwól na nagrywanie",
+			"KBPS": "kb/s",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "Możliwość zaplanowania wydarzenia konferencyjnego"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "Połączenie wideo",
+			"VIDEO_CALLING_EXPLANATION": "Wyłączenie połączenia wideo spowoduje dołączenie do spotkania w trybie audio + prezentacja",
+			"DEFAULT_FORMAT": "Domyślny format czasu w systemie",
+			"DATE_FORMAT_TITLE": "Format daty:",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "MM.DD.RR",
+				"DD_MM_YY": "DD.MM.RR"
+			},
+			"TIME_FORMAT": "Użyj formatu 24-godzinnego",
+			"ENABLE_LOGGING": "Włącz rejestrowanie",
+			"DOWNLOAD_LOGS": "Pobierz pliki dziennika",
+			"REPORT_A_PROBLEM_EML": "Zgłoś problem pobierając, a następnie otwierając plik .eml",
+			"REPORT_A_PROBLEM_EMAIL": "Zgłoś problem ręcznie dołączając do e-maila skompresowane pliki dziennika"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "Nazwa",
+			"TABLE_DESCRIPTION": "Opis",
+			"TABLE_VERSION": "Wersja",
+			"TABLE_TYPE": "Typ",
+			"DOWNLOAD_AC": "Pobierz aplikację V{{version}}",
+			"DOWNLOAD_CHROME_PLUGIN": "Pobierz dodatek Avaya Sharing",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "Pobierz dodatek Meeting Outlook ze sklepu Microsoft Store",
+			"CLIENT_INFO": "Zainstalowano wersję {{version}}",
+			"UPDATE_AC": "Zaktualizuj Avaya Workplace do wersji {{version}}",
+			"REMOTE_INFO": "Nie mam już aplikacji",
+			"CONTINUE": "Kontynuuj",
+			"OPTIONAL": "Opcjonalne",
+			"REQUIRED": "Wymagane",
+			"NO_CLIENT": "Nie wykryto klienta"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "Bieżące hasło:",
+			"NEW": "Nowe hasło:",
+			"CONFIRM": "Powtórz nowe hasło:",
+			"CHANGE": "Zmień",
+			"ERROR": {
+				"REQUIRED": "Wymagane!",
+				"DO_NOT_MATCH": "Hasła nie są takie same",
+				"INVALID": "Nieprawidłowe!",
+				"SERVER_NOT_CHANGED": "Nie zmieniono hasła. Spróbuj ponownie później",
+				"SERVER_BAD_OLD_PASSWORD": "Bieżące hasło jest nieprawidłowe. Spróbuj ponownie później",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "Próbujesz użyć starego hasła",
+				"SERVER_CHANGE_FREQUENCY": "Nie można zmienić hasła dwukrotnie w ciągu jednego dnia",
+				"SERVER_CHANGE_REPEATED_CHARS": "BŁĄD – Nie może zawierać powtarzających się znaków lub ich sekwencji",
+				"SERVER_CHANGE_COMPLEXITY": "BŁĄD – Musi zawierać następujące 4 kategorie znaków: małe litery / wielkie litery / cyfry / niealfanumeryczne znaki specjalne",
+				"SERVER_TOO_SHORT": "Nowe hasło jest za krótkie",
+				"SERVER_INVALID_TOKEN": "Łącze do odzyskania hasła wygasło. Poproś o nie ponownie!",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "Przekroczona liczba haseł, które nie mogą być ponownie używane",
+				"CANNOT_CONTAIN_LOGIN_ID": "Hasło nie może zawierać identyfikatora logowania",
+				"MUST_CONTAIN_4_CATEGORIES": "Musi zawierać następujące 4 kategorie znaków: małe litery/ wielkie litery/ cyfry/ niealfanumeryczne znaki specjalne",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "Nie może zawierać powtarzających się znaków",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "Nie może zawierać sekwencji znaków"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "Aktualizacja ustawień nie powiodła się",
+			"NOT_VALID_ROOM_NAME": "Nieprawidłowa nazwa pokoju!",
+			"NOT_VALID_PIN": "Nieprawidłowy PIN!",
+			"NUMERIC_PIN_CODE_ALLOWED": "Użyj numerycznego kodu PIN",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "Niedozwolone znaki",
+			"REQUIRED": "Wymagane",
+			"ORG_NOT_EXIST": "System Avaya Meetings jest skonfigurowany do obsługi wielu organizacji. Należy określić żądaną organizację jako część adresu URL. Aby uzyskać więcej informacji, skontaktuj się z administratorem systemu Avaya Meetings.",
+			"RESOURCES_NOT_FETCHED": "Nie można pobrać zasobów z serwera.\nKomunikat o błędzie: {{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "Brak połączenia z serwerem AADS",
+			"WAITING_ROOM_MUST_BE_ENABLED": "Należy włączyć poczekalnię",
+			"MODERATOR_PIN_REQUIRED": "Wymagany jest kod PIN moderatora",
+			"WRONG_MEETING_TYPE": "Nieprawidłowy typ spotkania",
+			"NO_DATA_TO_INIT_USER_SERVICE": "Nie można uzyskać danych z serwisu użytkownika (adresy URL obrazów)",
+			"MAX_PLAY_NUMBER_MORE_THAN": "maks. 100 uczestników"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "Wyłączenie logowania spowoduje usunięcie poprzednich plików dziennika.\nCzy chcesz kontynuować?",
+			"NO_LOGS": "Brak dostępnych plików dziennika Rozpocznij konferencję, aby zacząć logowanie."
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "Zmiana PIN-u nie wpłynie na aktywne spotkania i istniejące zaplanowane spotkania.",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "Zmiana PIN-u nie wpłynie na aktywne spotkania."
+	},
+	"ON": "Włączone",
+	"OFF": "Wył.",
+	"DISABLED": "Wyłączony",
 	"ABOUT": {
 		"TITLE": "Informacje o Avaya Meetings",
 		"RELEASE": "Wersja:",
