--- a/src/assets/i18n/zh-CN.json
+++ b/src/assets/i18n/zh-CN.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Avaya 设置",
+		"SETTINGS": "设置",
+		"USER": "用户设置",
+		"ROOM": "虚拟会议室",
+		"GENERAL": "常规设置",
+		"CLIENT": "客户端",
+		"PREFERENCES": "用户首选项",
+		"SUPPORT": "支持",
+		"PASSWORD": "更改密码",
+		"PASSWORD_RESET": "密码重置",
+		"OK": "确定",
+		"CANCEL": "取消",
+		"RESET": "重置",
+		"APPLY": "应用",
+		"AUTO": "自动",
+		"USER_TAB": {
+			"DELETE": "删除",
+			"CANCEL": "取消",
+			"LOCATION": "会议位置：",
+			"DEFAULT_ROOM": "默认虚拟会议室：",
+			"UPLOAD_NEW": "上传新内容",
+			"UPLOAD_PROFILE_PHOTO": "上传头像",
+			"UPLOAD_NEW_PHOTO": "上传新照片",
+			"EDIT_PROFILE_PHOTO": "编辑头像",
+			"DELETE_PHOTO_TITLE": "是否要删除您的头像？",
+			"DELETE_PHOTO_DESCRIPTION": "此操作无法撤消。",
+			"UPLOADING_ERROR": "上传失败，请联系管理员",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "无法删除此图像",
+			"AUDIO_PROMPTS_LANGUAGE": "语音提示语言：",
+			"PARTICIPANT_ID": "您的参与者 ID：",
+			"REFRESH": "刷新",
+			"SEARCH_USER": "搜索用户",
+			"REMOVE_USER": "删除委托",
+			"DELEGATED_TITLE": "指定哪些人可以在我的会议室中安排会议"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "虚拟会议室号码：",
+			"ROOM_NAME": "虚拟会议室名称：",
+			"ROOM_DESCRIPTION": "说明：",
+			"MEETING_TYPE": "会议类型：",
+			"MODERATOR_PIN": "会议主持人 PIN 码：",
+			"MODERATOR_PIN_NOTE": "与会者必须输入此 PIN 码才能使用主持人控件。",
+			"ENTRY_PIN": "使用 PIN 码保护会议",
+			"ENTRY_PIN_NOTE": "与会者必须输入此 PIN 码才能加入您的会议。",
+			"ALLOW_REQUESTS": "允许加入锁定会议的请求",
+			"ALWAYS_RECORD_MEETING": "会议开始时自动打开录制功能",
+			"RECORDING_NOT_SUPPORTED": "此虚拟会议室不支持录制功能",
+			"WAITING_ROOM": "在主持人加入会议之前，将与会者暂留在“等候室”",
+			"TERMINATE_MEETING": "在最后一名会议主持人离开后终止会议",
+			"PERMANENT_PIN": "永久性 PIN 码：",
+			"ONETIME_PIN": "每次会议使用一次性 PIN 码",
+			"DEFAULT": "默认会议室",
+			"PUBLIC": "公共会议室",
+			"ADVANCED": "高级",
+			"DURATION_AFTER_LEFT": "离开后的持续时间：",
+			"TERMINATION_CONDITION": "终止条件：",
+			"MAX_PARTICIPANTS": "最大与会人数：",
+			"NO_LIMIT": "无限制",
+			"SEARCH_ENDPOINTS": "搜索终端",
+			"AUDIO_PROMPTS_LANGUAGE": "访客用户的音频提示语言：",
+			"INVITATION_LANGUAGE": "邀请语言：",
+			"PREFERRED_DIAL_IN_LOCATION": "首选的拨入位置：",
+			"ENABLE_SHARING_FOR": "为下列对象启用共享：",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "仅限会议主持人",
+				"MODERATOR_AND_REGISTERED_USER": "会议主持人和已注册的用户",
+				"EVERYONE": "所有人"
+			},
+			"ENTRY_ANNOUNCEMENT": "进入通知：",
+			"EXIT_ANNOUNCEMENT": "退出通知：",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "播放进入/退出提示音的最多次数：",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "播放进入/退出名字通知的最多次数：",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "无",
+				"TONE": "提示音",
+				"NAME": "姓名"
+			},
+			"MAX_ROOM_ENDPOINTS": "最大会议室终端数量：",
+			"PROTECTED_PARTICIPANT_ID": "使用参与者 ID 保护会议",
+			"PROTECTED_PARTICIPANT_ID_INFO": "将禁止来宾用户和会议室系统加入会议"
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "正常",
+			"AFTER_ALL_PARTIES_LEFT": "在所有参与者离开后",
+			"AFTER_HOST_LEFT": "在主持离开后"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "重置为默认值",
+			"AUDIO_MUTED": "参与会议时让麦克风静音",
+			"SPEAKER_MUTED": "参与会议时让扬声器静音",
+			"ENABLE_AC": "在此 PC 上启用 Avaya",
+			"ENABLE_SDC": "在此 PC 上启用 Scopia Desktop Client"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "用户名：",
+			"EMAIL": "电子邮件：",
+			"FIRST_NAME": "名字：",
+			"LAST_NAME": "姓氏：",
+			"PHONE_OFFICE": "电话(办公)：",
+			"PHONE_MOBILE": "电话(手机)：",
+			"MAX_BANDWIDTH": "允许的最大带宽：",
+			"PERSONAL_ENDPOINT": "个人终端：",
+			"RECORDING_POLICY": "录制规则：",
+			"GROUPS": "组",
+			"SCHEDULABLE": "可计划",
+			"RESERVABLE": "可保留",
+			"ALLOW_STREAMING": "允许串流",
+			"ALLOW_RECORDING": "允许录制",
+			"KBPS": "Kbps",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "可以安排事件会议"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "视频呼叫",
+			"VIDEO_CALLING_EXPLANATION": "禁用“视频呼叫”将以音频 + 演示文稿模式加入会议",
+			"DEFAULT_FORMAT": "使用系统默认时间格式",
+			"DATE_FORMAT_TITLE": "日期格式",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "年/月/日",
+				"DD_MM_YY": "日/月/年"
+			},
+			"TIME_FORMAT": "使用 24 小时格式",
+			"ENABLE_LOGGING": "启用日志记录",
+			"DOWNLOAD_LOGS": "下载日志",
+			"REPORT_A_PROBLEM_EML": "以下载 .eml 文件并开启文件的方式来报告问题",
+			"REPORT_A_PROBLEM_EMAIL": "以在电子邮件中手动附加压缩日志文件的方式来报告问题"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "名称",
+			"TABLE_DESCRIPTION": "说明",
+			"TABLE_VERSION": "版本",
+			"TABLE_TYPE": "类型",
+			"DOWNLOAD_AC": "下载应用程序 V{{version}}",
+			"DOWNLOAD_CHROME_PLUGIN": "下载 Avaya 共享插件",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "从微软商城下载会议的 Outlook 插件",
+			"CLIENT_INFO": "已安装版本 {{version}}",
+			"UPDATE_AC": "将 Avaya Workplace 更新为 {{version}}",
+			"REMOTE_INFO": "我已经卸载应用程序",
+			"CONTINUE": "继续",
+			"OPTIONAL": "可选",
+			"REQUIRED": "必填",
+			"NO_CLIENT": "未检测到用户"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "当前密码：",
+			"NEW": "新密码：",
+			"CONFIRM": "重复新密码：",
+			"CHANGE": "更改",
+			"ERROR": {
+				"REQUIRED": "必填项！",
+				"DO_NOT_MATCH": "密码不匹配",
+				"INVALID": "无效！",
+				"SERVER_NOT_CHANGED": "密码尚未更改。请稍后重试",
+				"SERVER_BAD_OLD_PASSWORD": "当前密码已失效。请重试",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "您正在尝试使用旧密码",
+				"SERVER_CHANGE_FREQUENCY": "每天只能更改 1 次密码",
+				"SERVER_CHANGE_REPEATED_CHARS": "错误 - 不得包含重复或顺序字符",
+				"SERVER_CHANGE_COMPLEXITY": "错误 - 必须包含以下 4 种类别：小写英文字母/大写英文字母/数字/非字母数字特殊字符",
+				"SERVER_TOO_SHORT": "新密码太短",
+				"SERVER_INVALID_TOKEN": "密码恢复链接已过期。请重新申请！",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "超出无法重复使用的旧密码数量",
+				"CANNOT_CONTAIN_LOGIN_ID": "密码不能包含当前登录 ID",
+				"MUST_CONTAIN_4_CATEGORIES": "必须包含以下 4 种类别: 小写字母/大写字母/数字/非字母数字的特殊字符",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "不得包含重复字符",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "不得包含连续字符"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "无法更新设置",
+			"NOT_VALID_ROOM_NAME": "会议室名称无效！",
+			"NOT_VALID_PIN": "PIN 码无效！",
+			"NUMERIC_PIN_CODE_ALLOWED": "使用数字 PIN 码",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "不允许使用的字符",
+			"REQUIRED": "必填",
+			"ORG_NOT_EXIST": "Avaya Meetings 已配置为支持多个组织。您必须指定所需的组织作为 URL 的一部分。请联系您的 Avaya Meetings 管理员以获得更多信息",
+			"RESOURCES_NOT_FETCHED": "无法从服务器获取资源。\n错误信息：{{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "无法连接 AADS 服务器",
+			"WAITING_ROOM_MUST_BE_ENABLED": "必须启用等候室",
+			"MODERATOR_PIN_REQUIRED": "需要会议主持人 PIN",
+			"WRONG_MEETING_TYPE": "会议类型错误",
+			"NO_DATA_TO_INIT_USER_SERVICE": "无法从用户服务提取数据 (picture urls)",
+			"MAX_PLAY_NUMBER_MORE_THAN": "最多允许 100 位参与者"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "禁用日志记录将删除之前的日志\n是否确定要继续？",
+			"NO_LOGS": "没有可用的日志。请启动会议以开始记录。"
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "更改的 PIN 码不会影响活动中的会议和现已安排的会议。",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "更改的 PIN 码不会影响活动中的会议。"
+	},
+	"ON": "打开",
+	"OFF": "关闭",
+	"DISABLED": "已禁用",
 	"ABOUT": {
 		"TITLE": "关于 Avaya Meetings",
 		"RELEASE": "版本：",
