--- a/src/assets/i18n/zh-TW.json
+++ b/src/assets/i18n/zh-TW.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Avaya 設定",
+		"SETTINGS": "設定",
+		"USER": "使用者設定",
+		"ROOM": "虛擬會議室",
+		"GENERAL": "一般設定",
+		"CLIENT": "用戶端",
+		"PREFERENCES": "使用者喜好設定",
+		"SUPPORT": "支援",
+		"PASSWORD": "變更密碼",
+		"PASSWORD_RESET": "密碼重設",
+		"OK": "好",
+		"CANCEL": "取消",
+		"RESET": "重設",
+		"APPLY": "套用",
+		"AUTO": "自動",
+		"USER_TAB": {
+			"DELETE": "刪除",
+			"CANCEL": "取消",
+			"LOCATION": "會議地點：",
+			"DEFAULT_ROOM": "預設虛擬會議室：",
+			"UPLOAD_NEW": "上傳新的",
+			"UPLOAD_PROFILE_PHOTO": "上傳設定檔相片",
+			"UPLOAD_NEW_PHOTO": "上傳新相片",
+			"EDIT_PROFILE_PHOTO": "編輯設定檔相片",
+			"DELETE_PHOTO_TITLE": "是否要刪除設定檔相片？",
+			"DELETE_PHOTO_DESCRIPTION": "此動作無法復原。",
+			"UPLOADING_ERROR": "上傳失敗，請聯絡您的管理員。",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "無法移除此影像",
+			"AUDIO_PROMPTS_LANGUAGE": "語音提示語言：",
+			"PARTICIPANT_ID": "您的參與者 ID：",
+			"REFRESH": "重新整理",
+			"SEARCH_USER": "搜尋使用者",
+			"REMOVE_USER": "刪除委託",
+			"DELEGATED_TITLE": "指定那些人可以在我的會議室中排定會議"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "虛擬會議室號碼：",
+			"ROOM_NAME": "虛擬會議室名稱：",
+			"ROOM_DESCRIPTION": "描述：",
+			"MEETING_TYPE": "會議類型：",
+			"MODERATOR_PIN": "會議主持人 PIN：",
+			"MODERATOR_PIN_NOTE": "參與者必須輸入此 PIN 才能使用會議主持人控制功能。",
+			"ENTRY_PIN": "使用 PIN 碼保護會議",
+			"ENTRY_PIN_NOTE": "參與者必須輸入此 PIN 才能加入您的會議。",
+			"ALLOW_REQUESTS": "允許他人要求加入鎖定的會議",
+			"ALWAYS_RECORD_MEETING": "在會議開始時自動開啟錄製",
+			"RECORDING_NOT_SUPPORTED": "此虛擬會議室不支援錄製",
+			"WAITING_ROOM": "將參與者置於「等候室」直到會議主持人加入",
+			"TERMINATE_MEETING": "最後一個會議主持人離開後終止會議",
+			"PERMANENT_PIN": "永久 PIN：",
+			"ONETIME_PIN": "每次會議使用單次 PIN",
+			"DEFAULT": "預設會議室",
+			"PUBLIC": "公開會議室",
+			"ADVANCED": "進階",
+			"DURATION_AFTER_LEFT": "以下持續時間過後離開：",
+			"TERMINATION_CONDITION": "終止條件：",
+			"MAX_PARTICIPANTS": "參與者人數上限：",
+			"NO_LIMIT": "沒有限制",
+			"SEARCH_ENDPOINTS": "搜尋端點",
+			"AUDIO_PROMPTS_LANGUAGE": "訪客使用者的音訊提示語言：",
+			"INVITATION_LANGUAGE": "邀請語言：",
+			"PREFERRED_DIAL_IN_LOCATION": "慣用撥入位置：",
+			"ENABLE_SHARING_FOR": "為以下人員啟用共用：",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "只有會議主持人",
+				"MODERATOR_AND_REGISTERED_USER": "會議主持人與已註冊的使用者",
+				"EVERYONE": "所有人"
+			},
+			"ENTRY_ANNOUNCEMENT": "進入宣告：",
+			"EXIT_ANNOUNCEMENT": "離開宣告：",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "最多播放參與者加入／離開提示音幾次：",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "最多播放參與者加入／離開名稱宣告幾次：",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "無",
+				"TONE": "提示音",
+				"NAME": "名稱"
+			},
+			"MAX_ROOM_ENDPOINTS": "會議室端點數上限：",
+			"PROTECTED_PARTICIPANT_ID": "使用參與者 ID 保護會議",
+			"PROTECTED_PARTICIPANT_ID_INFO": "訪客使用者和會議室系統將無法加入會議"
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "一般",
+			"AFTER_ALL_PARTIES_LEFT": "所有方離開後",
+			"AFTER_HOST_LEFT": "主辦者離開後"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "重設為預設值",
+			"AUDIO_MUTED": "加入會議時將麥克風靜音",
+			"SPEAKER_MUTED": "加入會議時將喇叭靜音",
+			"ENABLE_AC": "在此電腦上啟用 Avaya",
+			"ENABLE_SDC": "在此 PC 上啟用 Scopia Desktop Client"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "使用者名稱：",
+			"EMAIL": "電子郵件：",
+			"FIRST_NAME": "名字：",
+			"LAST_NAME": "姓氏：",
+			"PHONE_OFFICE": "電話（辦公室）：",
+			"PHONE_MOBILE": "電話（手機）：",
+			"MAX_BANDWIDTH": "最大允許頻寬：",
+			"PERSONAL_ENDPOINT": "個人端點：",
+			"RECORDING_POLICY": "錄製原則：",
+			"GROUPS": "群組",
+			"SCHEDULABLE": "可排程",
+			"RESERVABLE": "可預留",
+			"ALLOW_STREAMING": "允許串流",
+			"ALLOW_RECORDING": "允許錄製",
+			"KBPS": "Kbps",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "可以排程事件會議"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "視訊通話",
+			"VIDEO_CALLING_EXPLANATION": "停用「視訊通話」將以音訊 + 簡報模式加入會議",
+			"DEFAULT_FORMAT": "使用系統預設時間格式",
+			"DATE_FORMAT_TITLE": "日期格式：",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "MM 月 DD 日 YY 年",
+				"DD_MM_YY": "DD 日 MM 月 YY 年"
+			},
+			"TIME_FORMAT": "使用 24 小時制",
+			"ENABLE_LOGGING": "啟用記錄",
+			"DOWNLOAD_LOGS": "下載記錄",
+			"REPORT_A_PROBLEM_EML": "透過下載 .eml 檔案並開啟檔案來回報問題",
+			"REPORT_A_PROBLEM_EMAIL": "透過在電子郵件中手動附加壓縮記錄檔案來回報問題"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "名稱",
+			"TABLE_DESCRIPTION": "描述",
+			"TABLE_VERSION": "版本",
+			"TABLE_TYPE": "類型",
+			"DOWNLOAD_AC": "下載應用程式 {{version}} 版",
+			"DOWNLOAD_CHROME_PLUGIN": "下載 Avaya 共用外掛程式",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "從 Microsoft Store 下載適用於 Outlook 的會議增益集",
+			"CLIENT_INFO": "{{version}} 版本已安裝",
+			"UPDATE_AC": "將 Avaya Workplace 更新為 {{version}}",
+			"REMOTE_INFO": "我已不再擁有應用程式",
+			"CONTINUE": "繼續",
+			"OPTIONAL": "選用",
+			"REQUIRED": "必填",
+			"NO_CLIENT": "未偵測到用戶端"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "目前的密碼：",
+			"NEW": "新密碼：",
+			"CONFIRM": "再次輸入新密碼：",
+			"CHANGE": "變更",
+			"ERROR": {
+				"REQUIRED": "必填！",
+				"DO_NOT_MATCH": "密碼不相符",
+				"INVALID": "無效！",
+				"SERVER_NOT_CHANGED": "密碼已變更。請稍後重試",
+				"SERVER_BAD_OLD_PASSWORD": "目前的密碼無效。請重試",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "您正在嘗試使用舊密碼",
+				"SERVER_CHANGE_FREQUENCY": "密碼不能在 1 天內變更兩次",
+				"SERVER_CHANGE_REPEATED_CHARS": "錯誤 - 不得包含重複或順序字元",
+				"SERVER_CHANGE_COMPLEXITY": "錯誤 - 必須包含以下 4 類字元：小寫字母／大寫字母／數字／非數字特殊字元",
+				"SERVER_TOO_SHORT": "新密碼太短",
+				"SERVER_INVALID_TOKEN": "密碼復原連結已過期。請重新申請！",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "已超過無法重複使用的舊密碼數目",
+				"CANNOT_CONTAIN_LOGIN_ID": "密碼中不能包含登入 ID",
+				"MUST_CONTAIN_4_CATEGORIES": "必須包含以下 4 類字元：小寫字母/大寫字母/數字/非數字特殊字元",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "不能包含重複字元",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "不能包含順序字元"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "無法更新設定",
+			"NOT_VALID_ROOM_NAME": "會議室名稱無效！",
+			"NOT_VALID_PIN": "PIN 無效！",
+			"NUMERIC_PIN_CODE_ALLOWED": "請使用數字 PIN 碼",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "不允許使用的字元",
+			"REQUIRED": "必填",
+			"ORG_NOT_EXIST": "Avaya Meetings 已設定為支援多個組織。您必須指定所需的組織作為 URL 的一部分。如需更多相關資訊，請與您的 Avaya Meetings 管理員聯絡",
+			"RESOURCES_NOT_FETCHED": "無法從伺服器取得資源。\n錯誤訊息：{{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "無法連線至 AADS 伺服器",
+			"WAITING_ROOM_MUST_BE_ENABLED": "必須啟用等候室",
+			"MODERATOR_PIN_REQUIRED": "要求提供會議主持人 PIN",
+			"WRONG_MEETING_TYPE": "會議類型錯誤",
+			"NO_DATA_TO_INIT_USER_SERVICE": "無法從使用者服務取得資料（圖片 URL）",
+			"MAX_PLAY_NUMBER_MORE_THAN": "最多只允許 100 位參與者"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "停用記錄會刪除先前記錄。\n您是否要繼續？",
+			"NO_LOGS": "沒有可用的記錄。請啟動會議，以開始記錄。"
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "變更的 PIN 碼不會影響使用中的會議和現有的已排程會議。",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "變更的 PIN 代碼不會影響使用中的會議。"
+	},
+	"ON": "開",
+	"OFF": "關",
+	"DISABLED": "已停用",
 	"ABOUT": {
 		"TITLE": "關於 Avaya Meetings",
 		"RELEASE": "版本：",
