--- a/src/assets/i18n/fr-FR.json
+++ b/src/assets/i18n/fr-FR.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Paramètres Avaya",
+		"SETTINGS": "Paramètres",
+		"USER": "Paramètres utilisateur",
+		"ROOM": "Salle virtuelle",
+		"GENERAL": "Paramètres généraux",
+		"CLIENT": "Client",
+		"PREFERENCES": "Préférences utilisateur",
+		"SUPPORT": "Support",
+		"PASSWORD": "Modifier le mot de passe",
+		"PASSWORD_RESET": "Réinitialiser le mot passe",
+		"OK": "OK",
+		"CANCEL": "Annuler",
+		"RESET": "Réinitialiser",
+		"APPLY": "Appliquer",
+		"AUTO": "Automatique",
+		"USER_TAB": {
+			"DELETE": "Supprimer",
+			"CANCEL": "Annuler",
+			"LOCATION": "Emplacement de la réunion :",
+			"DEFAULT_ROOM": "Salle virtuelle par défaut :",
+			"UPLOAD_NEW": "Charger nouveau",
+			"UPLOAD_PROFILE_PHOTO": "Charger une photo de profil",
+			"UPLOAD_NEW_PHOTO": "Charger une nouvelle photo de profil",
+			"EDIT_PROFILE_PHOTO": "Modifier la photo de profil",
+			"DELETE_PHOTO_TITLE": "Supprimer votre photo de profil ?",
+			"DELETE_PHOTO_DESCRIPTION": "Cette opération ne peut être annulée.",
+			"UPLOADING_ERROR": "Échec du chargement. Veuillez contacter l’administrateur.",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "Impossible de supprimer l’image.",
+			"AUDIO_PROMPTS_LANGUAGE": "Langue des invites audio :",
+			"PARTICIPANT_ID": "Votre ID de participant :",
+			"REFRESH": "Actualiser",
+			"SEARCH_USER": "Rechercher des utilisateurs",
+			"REMOVE_USER": "Supprimer la délégation",
+			"DELEGATED_TITLE": "Délégués qui peuvent planifier des réunions dans mes salles de réunion"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "Numéro de la salle virtuelle :",
+			"ROOM_NAME": "Nom de la salle virtuelle :",
+			"ROOM_DESCRIPTION": "Description :",
+			"MEETING_TYPE": "Type de réunion :",
+			"MODERATOR_PIN": "Code PIN de modérateur :",
+			"MODERATOR_PIN_NOTE": "Les participants doivent saisir ce code PIN pour utiliser les commandes de modérateur.",
+			"ENTRY_PIN": "Protéger les réunions par un code PIN",
+			"ENTRY_PIN_NOTE": "Les participants doivent entrer ce code PIN pour accéder à vos réunions.",
+			"ALLOW_REQUESTS": "Autoriser les demandes de participation à des réunions verrouillées",
+			"ALWAYS_RECORD_MEETING": "Activer automatiquement l'enregistrement au début des réunions",
+			"RECORDING_NOT_SUPPORTED": "L'enregistrement n'est pas pris en charge par cette salle virtuelle",
+			"WAITING_ROOM": "Placer les participants dans une \"salle d'attente\" jusqu'à l'arrivée du modérateur",
+			"TERMINATE_MEETING": "Terminer la réunion après le départ du dernier modérateur",
+			"PERMANENT_PIN": "Code PIN permanent :",
+			"ONETIME_PIN": "Utiliser un code PIN unique pour chaque réunion",
+			"DEFAULT": "Salle par défaut",
+			"PUBLIC": "Salle publique",
+			"ADVANCED": "Paramètres avancés",
+			"DURATION_AFTER_LEFT": "Durée de maintien de la connexion une fois que tous les participants ont quitté la réunion :",
+			"TERMINATION_CONDITION": "Condition de coupure de connexion :",
+			"MAX_PARTICIPANTS": "Nombre maximal de participants :",
+			"NO_LIMIT": "Aucune limite",
+			"SEARCH_ENDPOINTS": "Rechercher les points de terminaison",
+			"AUDIO_PROMPTS_LANGUAGE": "Langue des invites audio pour les utilisateurs invités :",
+			"INVITATION_LANGUAGE": "Langue de l'invitation :",
+			"PREFERRED_DIAL_IN_LOCATION": "Emplacement d'accès préféré :",
+			"ENABLE_SHARING_FOR": "Activer le partage pour :",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "Le modérateur uniquement",
+				"MODERATOR_AND_REGISTERED_USER": "Le modérateur et les utilisateurs inscrits",
+				"EVERYONE": "Tous"
+			},
+			"ENTRY_ANNOUNCEMENT": "Annonce d'entrée :",
+			"EXIT_ANNOUNCEMENT": "Annonce de sortie :",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "Nombre maximal de participants pour l'émission de la tonalité d'entrée/sortie :",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "Nombre maximal de participants pour l'annonce des noms des entrants/sortants :",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "Aucun(e)",
+				"TONE": "Tonalité",
+				"NAME": "Nom"
+			},
+			"MAX_ROOM_ENDPOINTS": "Nombre maximal de points de terminaison de la salle de réunion :",
+			"PROTECTED_PARTICIPANT_ID": "Protéger la réunion avec l'ID de participant",
+			"PROTECTED_PARTICIPANT_ID_INFO": "Les utilisateurs invités et les systèmes de salle ne seront pas autorisés à rejoindre la réunion."
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "Normale",
+			"AFTER_ALL_PARTIES_LEFT": "Une fois que tous les participants ont quitté la réunion",
+			"AFTER_HOST_LEFT": "Une fois que l'hôte a quitté la réunion"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "Rétablir les valeurs par défaut",
+			"AUDIO_MUTED": "Désactiver le microphone lors de l’accès aux réunions",
+			"SPEAKER_MUTED": "Désactiver les haut-parleurs lors de l’accès aux réunions",
+			"ENABLE_AC": "Activer Avaya sur ce PC",
+			"ENABLE_SDC": "Activer Scopia Desktop Client sur ce PC"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "Nom d'utilisateur :",
+			"EMAIL": "E-mail :",
+			"FIRST_NAME": "Prénom :",
+			"LAST_NAME": "Nom :",
+			"PHONE_OFFICE": "Téléphone (bureau) :",
+			"PHONE_MOBILE": "Téléphone (portable) :",
+			"MAX_BANDWIDTH": "Bande passante maximale autorisée :",
+			"PERSONAL_ENDPOINT": "Point de terminaison personnel :",
+			"RECORDING_POLICY": "Stratégie d'enregistrement :",
+			"GROUPS": "Groupes",
+			"SCHEDULABLE": "Possibilité de planification",
+			"RESERVABLE": "Possibilité de réservation",
+			"ALLOW_STREAMING": "Autoriser la diffusion en continu",
+			"ALLOW_RECORDING": "Autoriser l'enregistrement",
+			"KBPS": "Kbits/s",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "Peut programmer une conférence d'événement"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "Appels vidéo",
+			"VIDEO_CALLING_EXPLANATION": "Désactiver 'Appels vidéos' vous fera rejoindre une réunion en mode audio + présentation",
+			"DEFAULT_FORMAT": "Utiliser le format horaire système par défaut",
+			"DATE_FORMAT_TITLE": "Format de date :",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "MM/JJ/AA",
+				"DD_MM_YY": "JJ/MM/AA"
+			},
+			"TIME_FORMAT": "Utiliser le format 24 heures",
+			"ENABLE_LOGGING": "Activer la journalisation",
+			"DOWNLOAD_LOGS": "Télécharger les journaux",
+			"REPORT_A_PROBLEM_EML": "Signaler le problème en téléchargeant et en ouvrant le fichier .eml",
+			"REPORT_A_PROBLEM_EMAIL": "Signaler le problème en attachant manuellement le fichier journal compressé à l'email"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "Nom",
+			"TABLE_DESCRIPTION": "Description",
+			"TABLE_VERSION": "Version",
+			"TABLE_TYPE": "Type",
+			"DOWNLOAD_AC": "Télécharger l'application v{{version}}",
+			"DOWNLOAD_CHROME_PLUGIN": "Télécharger le plug-in de partage Avaya",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "Téléchargez le complément Outlook pour les réunions depuis le Microsoft Store",
+			"CLIENT_INFO": "Version {{version}} installée",
+			"UPDATE_AC": "Mettre à jour Avaya Workplace à la version {{version}}",
+			"REMOTE_INFO": "Je ne dispose plus de l'application.",
+			"CONTINUE": "Continuer",
+			"OPTIONAL": "Facultatif",
+			"REQUIRED": "Requis",
+			"NO_CLIENT": "Pas de client détecté"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "Mot de passe actuel :",
+			"NEW": "Nouveau mot de passe :",
+			"CONFIRM": "Confirmer le nouveau mot de passe :",
+			"CHANGE": "Modifier",
+			"ERROR": {
+				"REQUIRED": "Requis",
+				"DO_NOT_MATCH": "Les mots de passe sont différents.",
+				"INVALID": "Invalide",
+				"SERVER_NOT_CHANGED": "Le mot de passe n'a pas été modifié. Veuillez réessayer ultérieurement.",
+				"SERVER_BAD_OLD_PASSWORD": "Le mot de passe entré n'est pas valide. Veuillez réessayer.",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "Vous essayez d'utiliser un ancien mot de passe.",
+				"SERVER_CHANGE_FREQUENCY": "Le mot de passe ne peut pas être modifié deux fois dans une même journée.",
+				"SERVER_CHANGE_REPEATED_CHARS": "ERREUR - Ne doit pas contenir de caractères répétés ou séquentiels",
+				"SERVER_CHANGE_COMPLEXITY": "ERREUR - Le mot de passe doit contenir les 4 catégories de caractères suivantes : minuscules, majuscules, chiffres, caractères spéciaux non-alphanumériques.",
+				"SERVER_TOO_SHORT": "Le nouveau mot de passe est trop court",
+				"SERVER_INVALID_TOKEN": "Le lien de récupération du mot de passe a expiré. Veuillez en demander un nouveau !",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "Dépassement du nombre de mots de passe précédents qui ne peuvent être réutilisés",
+				"CANNOT_CONTAIN_LOGIN_ID": "Le mot de passe ne peut pas contenir l'ID de connexion.",
+				"MUST_CONTAIN_4_CATEGORIES": "Le mot de passe doit contenir les 4 catégories de caractères suivantes : minuscules, majuscules, chiffres, caractères spéciaux non alphanumériques.",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "Ne doit pas contenir de caractères répétés",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "Ne doit pas contenir de caractères séquentiels"
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "Échec de la mise à jour des paramètres",
+			"NOT_VALID_ROOM_NAME": "Nom de salle non valide !",
+			"NOT_VALID_PIN": "Code PIN non valide !",
+			"NUMERIC_PIN_CODE_ALLOWED": "Utilisez un code PIN numérique",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "Caractères non autorisés",
+			"REQUIRED": "Requis",
+			"ORG_NOT_EXIST": "Avaya Meetings est configuré pour prendre en charge plusieurs organisations. Vous devez spécifier l'organisation souhaitée dans l'URL. Pour plus d'informations, veuillez contacter votre administrateur Avaya Meetings.",
+			"RESOURCES_NOT_FETCHED": "Impossible d'obtenir les ressources à partir du serveur.\nMessage d'erreur : {{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "Impossible de se connecter au serveur AADS",
+			"WAITING_ROOM_MUST_BE_ENABLED": "La salle d'attente doit être activée",
+			"MODERATOR_PIN_REQUIRED": "Le code PIN modérateur est requis",
+			"WRONG_MEETING_TYPE": "Mauvais type de réunion",
+			"NO_DATA_TO_INIT_USER_SERVICE": "Impossible d'obtenir des données du service utilisateurs (urls d'images).",
+			"MAX_PLAY_NUMBER_MORE_THAN": "100 participants max. autorisés"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "La désactivation de la journalisation supprimera les journaux précédents.\nSouhaitez-vous continuer ?",
+			"NO_LOGS": "Aucun journal n'est disponible. Veuillez commencer votre conférence pour démarrer la journalisation."
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "La modification du code PIN n'affectera pas les réunions actives ni les réunions planifiées existantes.",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "La modification du code PIN n'affectera pas les réunions actives."
+	},
+	"ON": "Activé",
+	"OFF": "Désactivé",
+	"DISABLED": "Désactivé",
 	"ABOUT": {
 		"TITLE": "À propos d'Avaya Meetings",
 		"RELEASE": "Version :",
