--- a/src/assets/i18n/ko-KR.json
+++ b/src/assets/i18n/ko-KR.json
@@ -1,4 +1,197 @@
 {
+	"SETTINGS": {
+		"TITLE": "Avaya 설정",
+		"SETTINGS": "설정",
+		"USER": "사용자 설정",
+		"ROOM": "가상 회의실",
+		"GENERAL": "일반 설정",
+		"CLIENT": "클라이언트",
+		"PREFERENCES": "사용자 기본 설정",
+		"SUPPORT": "지원",
+		"PASSWORD": "암호 변경",
+		"PASSWORD_RESET": "암호 재설정",
+		"OK": "확인",
+		"CANCEL": "취소",
+		"RESET": "재설정",
+		"APPLY": "적용",
+		"AUTO": "자동",
+		"USER_TAB": {
+			"DELETE": "삭제",
+			"CANCEL": "취소",
+			"LOCATION": "회의 위치:",
+			"DEFAULT_ROOM": "기본 가상 회의실:",
+			"UPLOAD_NEW": "새로 업로드",
+			"UPLOAD_PROFILE_PHOTO": "프로필 사진 업로드",
+			"UPLOAD_NEW_PHOTO": "새 사진 업로드",
+			"EDIT_PROFILE_PHOTO": "프로필 사진 편집",
+			"DELETE_PHOTO_TITLE": "프로필 사진을 삭제하시겠습니까?",
+			"DELETE_PHOTO_DESCRIPTION": "이 작업은 실행 취소할 수 없습니다.",
+			"UPLOADING_ERROR": "업로드에 실패했습니다. 관리자에게 문의하십시오.",
+			"CANT_REMOVE_IMAGE_ERROR_MESSAGE": "이미지를 제거할 수 없습니다.",
+			"AUDIO_PROMPTS_LANGUAGE": "오디오 프롬프트 언어:",
+			"PARTICIPANT_ID": "참가자 ID:",
+			"REFRESH": "새로고침",
+			"SEARCH_USER": "사용자 검색",
+			"REMOVE_USER": "위임 제거",
+			"DELEGATED_TITLE": "내 회의실에 회의를 예약할 수 있는 사용자 위임"
+		},
+		"ROOM_TAB": {
+			"ROOM_NUMBER": "가상 회의실 번호:",
+			"ROOM_NAME": "가상 회의실 이름:",
+			"ROOM_DESCRIPTION": "설명:",
+			"MEETING_TYPE": "회의 유형:",
+			"MODERATOR_PIN": "호스트 PIN:",
+			"MODERATOR_PIN_NOTE": "참가자가 호스트 제어를 사용하려면 이 PIN을 입력해야 합니다.",
+			"ENTRY_PIN": "PIN으로 회의 보호",
+			"ENTRY_PIN_NOTE": "참가자가 회의에 참가하려면 이 PIN을 입력해야 합니다.",
+			"ALLOW_REQUESTS": "잠긴 회의에 대한 참가 요청 허용",
+			"ALWAYS_RECORD_MEETING": "회의 시작 시 자동으로 레코딩 켜기",
+			"RECORDING_NOT_SUPPORTED": "이 가상 회의실에는 레코딩 기능이 지원되지 않음",
+			"WAITING_ROOM": "호스트가 회의에 참가하기 전에 참가자를 '대기실'에 배치",
+			"TERMINATE_MEETING": "마지막 중재자가 나간 후 회의 종결",
+			"PERMANENT_PIN": "영구 PIN:",
+			"ONETIME_PIN": "모든 회의에 일회용 PIN 사용",
+			"DEFAULT": "기본 회의실",
+			"PUBLIC": "공개 회의실",
+			"ADVANCED": "고급 설정",
+			"DURATION_AFTER_LEFT": "나간 후 지속 시간:",
+			"TERMINATION_CONDITION": "종료 조건:",
+			"MAX_PARTICIPANTS": "최대 참가자:",
+			"NO_LIMIT": "제한 없음",
+			"SEARCH_ENDPOINTS": "엔드포인트 검색",
+			"AUDIO_PROMPTS_LANGUAGE": "게스트 사용자에 대한 오디오 프롬프트 언어:",
+			"INVITATION_LANGUAGE": "초대 언어:",
+			"PREFERRED_DIAL_IN_LOCATION": "기본 다이얼 위치:",
+			"ENABLE_SHARING_FOR": "다음에 대해 공유 허용:",
+			"SHARING_LIST": {
+				"ONLY_MODERATOR": "호스트만",
+				"MODERATOR_AND_REGISTERED_USER": "호스트 및 등록된 사용자",
+				"EVERYONE": "모두"
+			},
+			"ENTRY_ANNOUNCEMENT": "입장 알림:",
+			"EXIT_ANNOUNCEMENT": "퇴장 알림:",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_TONE": "입장/퇴장 신호음 재생 최대 참가자 수:",
+			"MAX_PARTICIPANTS_TO_PLAY_THE_ENTRY_EXIT_NAME_ANNOUNCEMENT": "입장/퇴장 이름 알림 재생 최대 참가자 수:",
+			"ANNOUNCEMENT_LIST": {
+				"NONE": "없음",
+				"TONE": "신호음",
+				"NAME": "이름"
+			},
+			"MAX_ROOM_ENDPOINTS": "최대 회의실 엔드 포인트:",
+			"PROTECTED_PARTICIPANT_ID": "참가자 ID로 회의실 보호",
+			"PROTECTED_PARTICIPANT_ID_INFO": "게스트 사용자와 회의실 시스템의 회의 참여를 허용하지 않습니다."
+		},
+		"TERMINATION_CONDITION": {
+			"NORMAL": "정상",
+			"AFTER_ALL_PARTIES_LEFT": "모든 상대방이 나간 후",
+			"AFTER_HOST_LEFT": "호스트가 나간 후"
+		},
+		"LOCAL_TAB": {
+			"CLEAR": "기본값으로 재설정",
+			"AUDIO_MUTED": "회의 참가 시 마이크 음소거",
+			"SPEAKER_MUTED": "회의 참가 시 스피커 음소거",
+			"ENABLE_AC": "해당 PC에서 Avaya 활성화",
+			"ENABLE_SDC": "이 PC에서 Scopia Desktop Client 활성화"
+		},
+		"GENERAL_TAB": {
+			"USER_NAME": "사용자 이름:",
+			"EMAIL": "이메일:",
+			"FIRST_NAME": "이름:",
+			"LAST_NAME": "성:",
+			"PHONE_OFFICE": "전화(사무실):",
+			"PHONE_MOBILE": "전화(휴대폰):",
+			"MAX_BANDWIDTH": "허용된 최대 대역폭:",
+			"PERSONAL_ENDPOINT": "개인 엔드포인트:",
+			"RECORDING_POLICY": "레코딩 정책:",
+			"GROUPS": "그룹",
+			"SCHEDULABLE": "예약 가능",
+			"RESERVABLE": "전용 예약 가능",
+			"ALLOW_STREAMING": "스트리밍 허용:",
+			"ALLOW_RECORDING": "레코딩 허용:",
+			"KBPS": "Kbps",
+			"CAN_SCHEDULE_EVENT_CONFERENCE": "이벤트 다자간 통화를 예약할 수 있음"
+		},
+		"PREFERENCES_TAB": {
+			"VIDEO_CALLING": "비디오 통화",
+			"VIDEO_CALLING_EXPLANATION": "‘비디오 통화’를 비활성화하면 오디오 + 프레젠테이션 모드로 참가하게 됩니다.",
+			"DEFAULT_FORMAT": "시스템 기본 시간 형식 사용",
+			"DATE_FORMAT_TITLE": "날짜 형식:",
+			"DATE_FORMATS": {
+				"MM_DD_YY": "MM/DD/YY",
+				"DD_MM_YY": "YY/MM/DD"
+			},
+			"TIME_FORMAT": "24시간제 사용",
+			"ENABLE_LOGGING": "로깅 사용",
+			"DOWNLOAD_LOGS": "로그 다운로드",
+			"REPORT_A_PROBLEM_EML": ".eml 파일을 다운로드한 다음 파일을 열어 문제 보고",
+			"REPORT_A_PROBLEM_EMAIL": "이메일에 압축 로그 파일을 수동으로 첨부하여 문제 보고"
+		},
+		"CLIENT_TAB": {
+			"TABLE_NAME": "이름",
+			"TABLE_DESCRIPTION": "설명",
+			"TABLE_VERSION": "버전",
+			"TABLE_TYPE": "유형",
+			"DOWNLOAD_AC": "V{{version}} 앱 다운로드",
+			"DOWNLOAD_CHROME_PLUGIN": "Avaya 공유 플러그인 다운로드",
+			"DOWNLOAD_OUTLOOK_PLUGIN": "Microsoft Store에서 Outlook 회의 추가 기능을 다운로드하십시오.",
+			"CLIENT_INFO": "릴리스 {{version}} 설치됨",
+			"UPDATE_AC": "Avaya Workplace {{version}}(으)로 업데이트",
+			"REMOTE_INFO": "앱을 더이상 보유하고 있지 않습니다.",
+			"CONTINUE": "계속",
+			"OPTIONAL": "옵션",
+			"REQUIRED": "필수",
+			"NO_CLIENT": "감지된 클라이언트 없음"
+		},
+		"PASSWORD_TAB": {
+			"CURRENT": "현재 암호:",
+			"NEW": "새 암호:",
+			"CONFIRM": "새 암호 반복:",
+			"CHANGE": "변경",
+			"ERROR": {
+				"REQUIRED": "필수!",
+				"DO_NOT_MATCH": "암호가 일치하지 않습니다.",
+				"INVALID": "올바르지 않음!",
+				"SERVER_NOT_CHANGED": "암호가 변경되지 않았습니다. 나중에 다시 시도하십시오.",
+				"SERVER_BAD_OLD_PASSWORD": "현재 암호가 잘못되었습니다. 다시 시도하십시오.",
+				"SERVER_UNABLE_USE_OLD_PASSWORD": "기존 암호를 사용하려 합니다.",
+				"SERVER_CHANGE_FREQUENCY": "암호는 1일 이내 두 번 변경할 수 없습니다.",
+				"SERVER_CHANGE_REPEATED_CHARS": "오류 - 반복 문자나 연속된 문자는 포함하면 안 됩니다.",
+				"SERVER_CHANGE_COMPLEXITY": "오류 - 소문자 / 대문자 / 숫자 / 영숫자가 아닌 특수 문자와 같은 4가지 범주를 포함해야 합니다.",
+				"SERVER_TOO_SHORT": "신규 암호가 너무 짧습니다.",
+				"SERVER_INVALID_TOKEN": "암호 복원 링크가 만료되었습니다. 다시 요청하십시오.",
+				"CANNOT_MACTH_PASSWORD_HISTORY": "재사용할 수 없는 이전 암호의 개수를 초과했습니다.",
+				"CANNOT_CONTAIN_LOGIN_ID": "로그인 ID를 암호에 포함할 수 없습니다.",
+				"MUST_CONTAIN_4_CATEGORIES": "소문자 / 대문자 / 숫자 / 영숫자가 아닌 특수 문자와 같은 4가지 범주를 포함해야 합니다.",
+				"CANNOT_CONTAIN_REPEATED_CHARS": "반복 문자를 포함해서는 안 됩니다.",
+				"CANNOT_CONTAIN_SEQUENTIAL_CHARS": "연속된 문자를 포함해서는 안 됩니다."
+			}
+		},
+		"ERROR": {
+			"SETTINGS_UPDATE_FAILED": "설정을 업데이트하지 못했습니다.",
+			"NOT_VALID_ROOM_NAME": "유효한 회의실 이름이 아닙니다.",
+			"NOT_VALID_PIN": "유효한 PIN이 아닙니다.",
+			"NUMERIC_PIN_CODE_ALLOWED": "숫자 PIN 코드 사용",
+			"VR_NAME_NOT_ALLOWED_CHARACTERS": "허용되지 않는 문자",
+			"REQUIRED": "필수",
+			"ORG_NOT_EXIST": "여러 조직을 지원하도록 Avaya Meetings가 구성되었습니다. 원하는 조직을 URL의 일부로 지정해야 합니다. 자세한 정보는 Avaya Meetings 관리자에게 문의하십시오.",
+			"RESOURCES_NOT_FETCHED": "서버에서 리소스를 가져올 수 없습니다.\n에러 메시지: {{errorMessage}}",
+			"ACS_RESOURCES_NOT_FETCHED": "AADS 서버에 연결할 수 없습니다.",
+			"WAITING_ROOM_MUST_BE_ENABLED": "대기실은 활성화되어 있어야 함",
+			"MODERATOR_PIN_REQUIRED": "호스트 PIN은 필수 입력 항목입니다.",
+			"WRONG_MEETING_TYPE": "잘못된 회의 유형",
+			"NO_DATA_TO_INIT_USER_SERVICE": "사용자 서비스(url 그림)에서 데이터를 가져올 수 없습니다",
+			"MAX_PLAY_NUMBER_MORE_THAN": "최대 100명 참가자 허용"
+		},
+		"LOGS_DIALOG": {
+			"WARNING": "로깅을 비활성화하면 이전 로그가 삭제됩니다.\n계속하시겠습니까?",
+			"NO_LOGS": "사용할 수 있는 로그가 없습니다. 로깅을 시작하려면 다자간 통화를 시작하십시오."
+		},
+		"MEETING_PIN_DIALOG_MESSAGE_CAN_RESERVE": "변경된 PIN은 활성 회의 및 기존 일정 회의에 영향을 주지 않습니다.",
+		"MEETING_PIN_DIALOG_MESSAGE_CANT_RESERVE": "변경된 PIN은 활성 회의에 영향을 주지 않습니다."
+	},
+	"ON": "켜짐",
+	"OFF": "꺼짐",
+	"DISABLED": "비활성화됨",
 	"ABOUT": {
 		"TITLE": "Avaya Meetings 정보",
 		"RELEASE": "릴리즈:",
